--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.9",
     "admin-lte": "^3.0.5",
     "bootstrap": "^4.5.0",
+    "jwt-decode": "^2.2.0",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
