--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "admin-lte": "^3.0.5",
+    "angular-validate-br": "0.1.0-beta",
     "bootstrap": "^4.5.0",
     "jwt-decode": "^2.2.0",
+    "ng-lottie": "^0.3.2",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-bootstrap-modal": "^2.0.1",
+    "ngx-mask": "^9.1.2",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
