--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-lottie": "^0.3.2",
     "ngx-bootstrap": "^5.6.1",
     "ngx-bootstrap-modal": "^2.0.1",
+    "ngx-currency": "^2.3.3",
     "ngx-mask": "^9.1.2",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
